# LDCM

./: .gitignore  README.md  main.py  pyproject.toml  readme.md  requirements.txt
assets/: README.md  manifest.json
assets/sample_1/: gt_depth.npy  sparse_depth.npy
assets/sample_2/: gt_depth.npy  sparse_depth.npy
assets/sample_3/: gt_depth.npy  sparse_depth.npy
assets/sample_5/: gt_depth.npy  sparse_depth.npy
ldcm/: README.md  __init__.py  depth_encoder.py  head.py  ldcm.py  poisson_completion.py  utils.py
ldcm/layers/: __init__.py  attention.py  block.py  vision_transformer.py
