[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ldcm"
version = "0.1.0"
description = "Large Depth Completion Model from sparse metric depth observations."
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["ldcm*"]
